// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`IntegrationTest tasks 1`] = `
{
  "description": "assert the snapshot of integration test 'foo'",
  "name": "integ:foo:assert",
  "steps": [
    {
      "execArgs": [
        "node",
        "-e",
        "const [dir, name, task] = process.argv.slice(1); const stat = require('fs').statSync(dir, { throwIfNoEntry: false }); if (!stat || !stat.isDirectory()) { console.error(\`No snapshot available for integration test '\${name}'. Run 'projen \${task}' to capture.\`); process.exit(1); }",
        "test/foo.integ.snapshot",
        "foo",
        "integ:foo:deploy",
      ],
    },
    {
      "execArgs": [
        "cdk",
        "synth",
        "--quiet",
        "--app",
        "ts-node -P test/tsconfig.json test/foo.integ.ts",
        "--no-notices",
        "--no-version-reporting",
        "--no-asset-metadata",
        "--no-path-metadata",
        "-o",
        "test/.tmp/foo.integ/assert.cdk.out",
      ],
    },
    {
      "execArgs": [
        "diff",
        "-r",
        "-x",
        "asset.*",
        "-x",
        "cdk.out",
        "-x",
        "manifest.json",
        "-x",
        "tree.json",
        "test/foo.integ.snapshot/",
        "test/.tmp/foo.integ/assert.cdk.out/",
      ],
    },
  ],
}
`;

exports[`IntegrationTest tasks 2`] = `
{
  "description": "deploy integration test 'foo' and capture snapshot",
  "name": "integ:foo:deploy",
  "steps": [
    {
      "execArgs": [
        "rm",
        "-fr",
        "test/.tmp/foo.integ/deploy.cdk.out",
      ],
    },
    {
      "execArgs": [
        "cdk",
        "deploy",
        "--app",
        "ts-node -P test/tsconfig.json test/foo.integ.ts",
        "--no-notices",
        "--no-version-reporting",
        "--no-asset-metadata",
        "--no-path-metadata",
        "**",
        "--require-approval=never",
        "-o",
        "test/.tmp/foo.integ/deploy.cdk.out",
      ],
    },
    {
      "execArgs": [
        "rm",
        "-fr",
        "test/foo.integ.snapshot",
      ],
    },
    {
      "execArgs": [
        "mv",
        "test/.tmp/foo.integ/deploy.cdk.out",
        "test/foo.integ.snapshot",
      ],
    },
    {
      "spawn": "integ:foo:destroy",
    },
  ],
}
`;

exports[`IntegrationTest tasks 3`] = `
{
  "description": "destroy integration test 'foo'",
  "name": "integ:foo:destroy",
  "steps": [
    {
      "execArgs": [
        "cdk",
        "destroy",
        "--app",
        "test/foo.integ.snapshot",
        "**",
        "--no-version-reporting",
      ],
    },
  ],
}
`;

exports[`IntegrationTest tasks 4`] = `
{
  "description": "update snapshot for integration test "foo"",
  "name": "integ:foo:snapshot",
  "steps": [
    {
      "execArgs": [
        "cdk",
        "synth",
        "--quiet",
        "--app",
        "ts-node -P test/tsconfig.json test/foo.integ.ts",
        "--no-notices",
        "--no-version-reporting",
        "--no-asset-metadata",
        "--no-path-metadata",
        "-o",
        "test/foo.integ.snapshot",
      ],
    },
  ],
}
`;

exports[`IntegrationTest tasks 5`] = `
{
  "description": "watch integration test 'foo' (without updating snapshots)",
  "name": "integ:foo:watch",
  "steps": [
    {
      "execArgs": [
        "cdk",
        "watch",
        "--app",
        "ts-node -P test/tsconfig.json test/foo.integ.ts",
        "--no-notices",
        "--no-version-reporting",
        "--no-asset-metadata",
        "--no-path-metadata",
        "**",
        "-o",
        "test/.tmp/foo.integ/deploy.cdk.out",
      ],
    },
  ],
}
`;

exports[`IntegrationTest tasks 6`] = `
{
  "description": "update snapshot for all integration tests",
  "name": "integ:snapshot-all",
  "steps": [
    {
      "spawn": "integ:foo:snapshot",
    },
    {
      "spawn": "integ:bar:snapshot",
    },
  ],
}
`;

exports[`synthesizing an integration test containing a multi-stack stage 1`] = `
{
  "description": "deploy integration test 'my-stage' and capture snapshot",
  "name": "integ:my-stage:deploy",
  "steps": [
    {
      "execArgs": [
        "rm",
        "-fr",
        "test/.tmp/my-stage.integ/deploy.cdk.out",
      ],
    },
    {
      "execArgs": [
        "cdk",
        "deploy",
        "--app",
        "ts-node -P test/tsconfig.json test/my-stage.myinteg.ts",
        "--no-notices",
        "--no-version-reporting",
        "--no-asset-metadata",
        "--no-path-metadata",
        "my-stage/*",
        "--require-approval=never",
        "-o",
        "test/.tmp/my-stage.integ/deploy.cdk.out",
      ],
    },
    {
      "execArgs": [
        "rm",
        "-fr",
        "test/my-stage.integ.snapshot",
      ],
    },
    {
      "execArgs": [
        "mv",
        "test/.tmp/my-stage.integ/deploy.cdk.out",
        "test/my-stage.integ.snapshot",
      ],
    },
    {
      "spawn": "integ:my-stage:destroy",
    },
  ],
}
`;

exports[`synthesizing an integration test containing a multi-stack stage 2`] = `
{
  "description": "update snapshot for integration test "my-stage"",
  "name": "integ:my-stage:snapshot",
  "steps": [
    {
      "execArgs": [
        "cdk",
        "synth",
        "--quiet",
        "--app",
        "ts-node -P test/tsconfig.json test/my-stage.myinteg.ts",
        "--no-notices",
        "--no-version-reporting",
        "--no-asset-metadata",
        "--no-path-metadata",
        "-o",
        "test/my-stage.integ.snapshot",
      ],
    },
  ],
}
`;

exports[`synthesizing an integration test containing a multi-stack stage 3`] = `
{
  "description": "watch integration test 'my-stage' (without updating snapshots)",
  "name": "integ:my-stage:watch",
  "steps": [
    {
      "execArgs": [
        "cdk",
        "watch",
        "--app",
        "ts-node -P test/tsconfig.json test/my-stage.myinteg.ts",
        "--no-notices",
        "--no-version-reporting",
        "--no-asset-metadata",
        "--no-path-metadata",
        "my-stage/*",
        "-o",
        "test/.tmp/my-stage.integ/deploy.cdk.out",
      ],
    },
  ],
}
`;

exports[`synthesizing cdk v2 integration tests 1`] = `
{
  "description": "deploy integration test 'foo' and capture snapshot",
  "name": "integ:foo:deploy",
  "steps": [
    {
      "execArgs": [
        "rm",
        "-fr",
        "test/.tmp/foo.integ/deploy.cdk.out",
      ],
    },
    {
      "execArgs": [
        "cdk",
        "deploy",
        "--app",
        "ts-node -P test/tsconfig.json test/foo.integ.ts",
        "--no-notices",
        "--no-version-reporting",
        "--no-asset-metadata",
        "--no-path-metadata",
        "**",
        "--require-approval=never",
        "-o",
        "test/.tmp/foo.integ/deploy.cdk.out",
      ],
    },
    {
      "execArgs": [
        "rm",
        "-fr",
        "test/foo.integ.snapshot",
      ],
    },
    {
      "execArgs": [
        "mv",
        "test/.tmp/foo.integ/deploy.cdk.out",
        "test/foo.integ.snapshot",
      ],
    },
    {
      "spawn": "integ:foo:destroy",
    },
  ],
}
`;

exports[`synthesizing cdk v2 integration tests 2`] = `
{
  "description": "update snapshot for integration test "foo"",
  "name": "integ:foo:snapshot",
  "steps": [
    {
      "execArgs": [
        "cdk",
        "synth",
        "--quiet",
        "--app",
        "ts-node -P test/tsconfig.json test/foo.integ.ts",
        "--no-notices",
        "--no-version-reporting",
        "--no-asset-metadata",
        "--no-path-metadata",
        "-o",
        "test/foo.integ.snapshot",
      ],
    },
  ],
}
`;

exports[`synthesizing cdk v2 integration tests 3`] = `
{
  "description": "watch integration test 'foo' (without updating snapshots)",
  "name": "integ:foo:watch",
  "steps": [
    {
      "execArgs": [
        "cdk",
        "watch",
        "--app",
        "ts-node -P test/tsconfig.json test/foo.integ.ts",
        "--no-notices",
        "--no-version-reporting",
        "--no-asset-metadata",
        "--no-path-metadata",
        "**",
        "-o",
        "test/.tmp/foo.integ/deploy.cdk.out",
      ],
    },
  ],
}
`;
